--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "moment": "^2.27.0",
     "ng-circle-progress": "1.2.0",
     "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.6.0",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
