--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "tslint": "~5.12.0",
     "typescript": "~3.1.6"
   },
-  "description": "Angular Demo of Ionic App Auth",
+  "description": "cartella-edit-student",
   "cordova": {
     "plugins": {
       "cordova-plugin-secure-storage": {},
