--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ajv": "^6.10.0",
     "cordova-android": "8.1.0",
     "cordova-ios": "5.1.1",
+    "cordova-plugin-advanced-http": "^3.0.0",
     "cordova-plugin-customurlscheme": "^5.0.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
@@ -96,7 +97,8 @@
         "ANDROID_SCHEME": " ",
         "ANDROID_HOST": " ",
         "ANDROID_PATHPREFIX": "/"
-      }
+      },
+      "cordova-plugin-advanced-http": {}
     },
     "platforms": [
       "ios",
