--- a/angular.json
+++ b/angular.json
@@ -14,6 +14,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "baseHref": "/edit-studente/",
             "outputPath": "www",
             "index": "src/index.html",
             "main": "src/main.ts",
