--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/http": "^5.3.0",
     "@ionic-native/in-app-browser": "^5.3.0",
+    "@ionic-native/keyboard": "^5.28.0",
     "@ionic-native/safari-view-controller": "^5.3.0",
     "@ionic-native/secure-storage": "^5.3.0",
     "@ionic-native/splash-screen": "^5.0.0",
