fix docker configuration

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,6 @@ server {
     index index.html;
     root /usr/share/nginx/html;
     location / {
-        try_files $uri$args $uri$args/ /index.html;
+        try_files $uri$args $uri$args/ /edit-studente/index.html;
     }
 }
