Fix for multiple configuration support
 ionic build --configuration=demo
 ionic build --configuration=dev
 ionic build --prod
 ionic build

--- a/angular.json
+++ b/angular.json
@@ -68,6 +68,22 @@
                 }
               ]
             },
+            "dev": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.dev.ts"
+                }
+              ]
+            },
+            "demo": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.demo.ts"
+                }
+              ]
+            },
             "ci": {
               "progress": false
             }
